--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>This is the first django project</title>
-  </head>
-  <body>
-    <div>
-      <h1><a href="/">Django project</a></h1>
-    </div>
+{% extends 'blog/base.html'%}
 
-    {%for post in data%}
-      <div>
-        <p>posted: {{ post.posted_date }}</p>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>{{ post.content|linebreaksbr }}</p>
-      </div>
-    {%endfor%}
-  </body>
-</html>
+{% block content %}
+{% for post in data %}
+<div class="post">
+  <div class="date">
+    <p>published: {{ post.posted_date }}</p>
+  </div>
+  <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+  <p>{{ post.content|linebreaksbr }}</p>
+</div>
+{% endfor %}
+{% endblock %}
