--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,9 @@
       {{ data.posted_date }}
     </div>
   {% endif %}
+  {% if user.is_authenticated%}
+    <a class="btn btn-default" href="{% url 'post_edit' pk=data.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+  {% endif %}
   <h2>{{ data.title }}</h2>
   <p>{{ data.content|linebreaksbr }}</p>
 {%endblock%}
